サーバー側から施設に対してのユーザーのお気に入り登録状況を返すように変更
